syntax = "proto3";
option go_package = "metricser/proto";

package metricser;

import "google/protobuf/empty.proto";

message Gauge {
  string id = 1;
  double value = 2;
}

message Counter {
  string id = 1;
  int64 delta = 2;
}

message ListMetricsResponse {
  repeated Gauge gauges = 1;
  repeated Counter counters = 2;
}
message ListMetricsRequest {
}

message AddMetricsRequest {
  repeated Gauge gauges = 1;
  repeated Counter counters = 2;
}

service Metrics {
  rpc AddMetrics(AddMetricsRequest) returns (google.protobuf.Empty);
  rpc ListMetrics(google.protobuf.Empty) returns (ListMetricsResponse);
}
